[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/FlyingEnemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/FlyingEnemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/EnemyHurt.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/foom_0.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/hit5.mp3" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Shader" id=2]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 flash_color:hint_color=vec4(1.0);
uniform float flash_modifier:hint_range(0.0,1.0)=0;

void fragment(){
	vec4 color=texture(TEXTURE,UV);
	color.rgb=mix(color.rgb,flash_color.rgb,flash_modifier);
	COLOR=color;
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Fly",
"speed": 7.0
} ]

[node name="FlyingEnemy" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 3 )
frames = SubResource( 8 )
animation = "Fly"
frame = 3
playing = true

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.07288e-06, 0 )
scale = Vector2( 1.1, 1 )

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0
attenuation = 1.4

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -2.0
pitch_scale = 2.0
attenuation = 1.42

[node name="DieSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.6
attenuation = 1.42

[connection signal="area_entered" from="." to="." method="_on_FlyingEnemy_area_entered"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="finished" from="DieSound" to="." method="_on_DieSound_finished"]
